fixed mobile spacing

--- a/birthday.css
+++ b/birthday.css
@@ -18,14 +18,14 @@ body {
 }
 
 .header {
-    margin-top: 2rem;
+    margin-top: .5rem;
     text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
     font-size: min(4rem, 11vw);
 }
 
 .subheader {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+    font-size: min(1.5rem, 4.4vw);
+    /* margin-bottom: 1rem; */
     text-align: center;
 }
 
@@ -58,7 +58,7 @@ button {
     padding-right: 0.5rem;
     background: #fb728f;
     color: white;
-    margin: 1rem;
+    margin: .5rem;
 }
 
 button:hover {
@@ -75,13 +75,12 @@ button:hover {
     position: relative;
     background: var(--plate-color);
     border: solid 1px #F4E5E0;
-    /* height: 20rem; */
-    height: min(25rem, 100vw);
+    height: min(25rem, 85vw);
 }
 
 .cake {
     position: absolute;
-    height: 70%;
+    height: 85%;
     background: #672B01;
     box-shadow: inset 0 0 0 8px #540e0c;
     overflow: hidden;
@@ -116,8 +115,9 @@ button:hover {
 }
 
 .count {
-    font-size: 2rem;
-    margin: 1rem;
+    /* font-size: 2rem; */
+    font-size: min(2rem, 7.1vw);
+    margin-bottom: .5rem;
 }
 
 .percent {
